--- a/views/index.ejs
+++ b/views/index.ejs
@@ -6,8 +6,21 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>hello world</h1>
-    <small>hello world</small>
+     <form action="/get-form-data" method="post">
+        <input type="text"
+        placeholder="Name"
+        name="name"
+        >
+        <input type="email"
+        placeholder="Email"
+        name="email"
+        >
+        <input type="password"
+        placeholder="Password"
+        name="password"
+        >
+        <button>Submit</button>
+     </form>
     
 </body>
 </html>
